# 2-2-lab

./: README.md
lab1/seminars/: test.cpp
lab1/task1/src/: task1.cpp
lab1/task1/src/builder_concrete/: builder_concrete.h
lab1/task1/src/json/: json.h
lab1/task1/src/json_concrete/: json_concrete.cpp  json_concrete.h
lab1/task1/src/logger_concrete/: logger_concrete.h
lab1/task1/src/logger_json_implementation/: logger_json_implementation.cpp
lab1/task10/: CMakeLists.txt
lab1/task10/src/: main.cpp  task10.cpp
lab1/task10/src/bigint/: bigint.cpp  bigint.h
lab1/task10/src/bigint_concrete/: bigint_concrete.cpp  bigint_concrete.h
lab1/task10/src/bigint_division/: bigint_division.cpp  bigint_division.h
lab1/task10/src/bigint_implementation/: bigint_implementation.cpp
lab1/task10/src/logger_concrete/: logger_concrete.cpp  logger_concrete.h
lab1/task10/src/long_number/: long_number.h
lab1/task10/src/string_number/: string_number.cpp  string_number.h
lab1/task10/src/vector_number/: vector_number.cpp  vector_number.h
lab1/task11/: CMakeLists.txt
lab1/task11/src/: main.cpp
lab1/task11/src/allocator_descriptor/: allocator_descriptor.cpp
lab1/task11/src/binary_search_tree/: binary_search_tree.h
lab1/task12/: CMakeLists.txt
lab1/task12/src/: main.cpp
lab1/task12/src/avl_tree/: avl_tree.h
lab1/task12/src/logger_concrete/: logger_concrete.cpp
lab1/task13/: CMakeLists.txt
lab1/task13/src/: main.cpp
lab1/task13/src/associative_container/: associative_container.h
lab1/task13/src/binary_search_tree/: binary_search_tree.h
lab1/task13/src/builder_concrete/: builder_concrete.cpp
lab1/task13/src/red_black_tree/: red_black_tree.h
lab1/task14/: CMakeLists.txt
lab1/task14/src/: main.cpp
lab1/task14/src/binary_search_tree/: binary_search_tree.h
lab1/task14/src/splay_tree/: splay_tree.h
lab1/task15/: CMakeLists.txt
lab1/task15/src/: main.cpp
lab1/task15/src/associative_container/: associative_container.h
lab1/task15/src/b_tree/: b_tree.h
lab1/task15/src/builder_concrete/: builder_concrete.h
lab1/task15/src/memory/: memory.h
lab1/task2/src/: task2.cpp
lab1/task2/src/allocator/: allocator.cpp  allocator.h
lab1/task2/src/memory/: memory.cpp  memory.h
lab1/task3/: CMakeLists.txt
lab1/task3/src/: task3.cpp
lab1/task3/src/allocator_list/: allocator_list.h
lab1/task3/src/builder/: builder.h
lab1/task3/src/memory/: memory.h
lab1/task4/: CMakeLists.txt
lab1/task4/src/: task4.cpp
lab1/task4/src/builder_concrete/: builder_concrete.h
lab1/task4/src/logger/: logger.h
lab1/task4/src/logger_concrete/: logger_concrete.cpp
lab1/task5/: CMakeLists.txt
lab1/task5/src/: task5.cpp
lab1/task5/src/logger/: logger.cpp
lab1/task5/src/logger_concrete/: logger_concrete.h
lab1/task5/src/memory/: memory.h
lab1/task6/: CMakeLists.txt
lab1/task6/src/: task6.cpp
lab1/task6/src/allocator/: allocator.cpp  allocator.h
lab1/task6/src/allocator_descriptor/: allocator_descriptor.cpp
lab1/task6/src/allocator_list/: allocator_list.cpp
lab1/task6/src/bigint/: bigint.cpp  bigint.h
lab1/task6/src/bigint_concrete/: bigint_concrete.cpp  bigint_concrete.h
lab1/task6/src/bigint_implementation/: bigint_implementation.h
lab1/task6/src/bigint_multiplication/: bigint_multiplication.cpp
lab1/task6/src/builder/: builder.h
lab1/task6/src/logger_concrete/: logger_concrete.cpp  logger_concrete.h
lab1/task6/src/long_number/: long_number.h
lab1/task6/src/string_number/: string_number.cpp  string_number.h
lab1/task6/src/vector_number/: vector_number.cpp  vector_number.h
lab1/task7/: CMakeLists.txt
lab1/task7/src/: task7.cpp
lab1/task7/src/allocator/: allocator.cpp  allocator.h
lab1/task7/src/bigint/: bigint.cpp  bigint.h
lab1/task7/src/bigint_concrete/: bigint_concrete.cpp  bigint_concrete.h
lab1/task7/src/bigint_multiplication/: bigint_multiplication.h
lab1/task7/src/long_number/: long_number.h
lab1/task7/src/vector_number/: vector_number.cpp  vector_number.h
